--- a/index.html
+++ b/index.html
@@ -90,44 +90,48 @@
     <div id="SMP" class="dropdown-container active">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
-            <!-- Batteries and adders for SMP -->
-            <option value="5000">5p - 5000</option>
-            <option value="9000">10p - 9000</option>
-            <!-- Add more options as needed -->
+            <!-- Adders for SMP -->
+            <option value="2500">MPU - 2500</option>
+            <option value="5000">Span MPU - 5000</option>
+            <option value="750">D-rate - 750</option>
+            <option value="500">Sub panel - basic - 500</option>
+            <!-- Add more options for SMP as per the list -->
         </select>
     </div>
 
     <div id="EmPower" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
+            <!-- Adders for EmPower -->
             <option value="5000">5p - 5000</option>
             <option value="9000">10p - 9000</option>
             <option value="3000">MPU - 3000</option>
             <option value="750">Sub-panel - 750</option>
-            <option value="750">Derate - 750</option>
-            <!-- Add more options as needed -->
+            <!-- Add more options for EmPower as per the list -->
         </select>
     </div>
 
     <div id="Trust" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
+            <!-- Adders for Trust -->
             <option value="9000">Tesla Power Wall 3 - 9000</option>
             <option value="8500">Additional Power Wall 3 - 8500</option>
-            <option value="4500">Enphase 5P - 4500</option>
             <option value="2800">MPU - 2800</option>
-            <!-- Add more options as needed -->
+            <option value="2500">EG4 BU - 2500</option>
+            <!-- Add more options for Trust as per the list -->
         </select>
     </div>
 
     <div id="FreedomForever" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
+            <!-- Adders for Freedom Forever -->
             <option value="5000">5P <= 4kw no backup - 5000</option>
             <option value="9750">10P <= 4kw no backup - 9750</option>
             <option value="800">Enphase IQ8 upgrade - 800</option>
-            <option value="1000">Critter guard - 1000</option>
-            <!-- Add more options as needed -->
+            <option value="1500">Tesla wall charger - 1500</option>
+            <!-- Add more options for Freedom Forever as per the list -->
         </select>
     </div>
 
