--- a/index.html
+++ b/index.html
@@ -87,51 +87,58 @@
         <div class="tab" onclick="showTab('FreedomForever')">Freedom Forever</div>
     </div>
 
+    <!-- SMP Tab Dropdown -->
     <div id="SMP" class="dropdown-container active">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
-            <!-- Adders for SMP -->
             <option value="2500">MPU - 2500</option>
             <option value="5000">Span MPU - 5000</option>
             <option value="750">D-rate - 750</option>
             <option value="500">Sub panel - basic - 500</option>
-            <!-- Add more options for SMP as per the list -->
+            <option value="1500">Sub panel - complex - 1500</option>
+            <option value="1500">EV charger - 1500</option>
+            <option value="500">EV outlet - 500</option>
+            <option value="1082.4">IQ 8 upgrade - 1082.4</option>
+            <option value="9300">10p - no back up - 9300</option>
+            <!-- Add the rest of the items for SMP as needed -->
         </select>
     </div>
 
+    <!-- EmPower Tab Dropdown -->
     <div id="EmPower" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
-            <!-- Adders for EmPower -->
             <option value="5000">5p - 5000</option>
             <option value="9000">10p - 9000</option>
+            <option value="13000">15p - 13000</option>
+            <option value="17000">20p - 17000</option>
+            <option value="21000">25p - 21000</option>
             <option value="3000">MPU - 3000</option>
-            <option value="750">Sub-panel - 750</option>
-            <!-- Add more options for EmPower as per the list -->
+            <!-- Add the rest of the items for EmPower as needed -->
         </select>
     </div>
 
+    <!-- Trust Tab Dropdown -->
     <div id="Trust" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
-            <!-- Adders for Trust -->
             <option value="9000">Tesla Power Wall 3 - 9000</option>
             <option value="8500">Additional Power Wall 3 - 8500</option>
             <option value="2800">MPU - 2800</option>
             <option value="2500">EG4 BU - 2500</option>
-            <!-- Add more options for Trust as per the list -->
+            <!-- Add the rest of the items for Trust as needed -->
         </select>
     </div>
 
+    <!-- Freedom Forever Tab Dropdown -->
     <div id="FreedomForever" class="dropdown-container">
         <label>Select Batteries & Adders:</label>
         <select multiple onchange="updateAddersBattery()">
-            <!-- Adders for Freedom Forever -->
             <option value="5000">5P <= 4kw no backup - 5000</option>
             <option value="9750">10P <= 4kw no backup - 9750</option>
             <option value="800">Enphase IQ8 upgrade - 800</option>
             <option value="1500">Tesla wall charger - 1500</option>
-            <!-- Add more options for Freedom Forever as per the list -->
+            <!-- Add the rest of the items for Freedom Forever as needed -->
         </select>
     </div>
 
