--- a/index.html
+++ b/index.html
@@ -103,7 +103,52 @@
         <label><input type="checkbox" value="2500" onchange="updateAddersBattery()"> MPU - 2500</label>
         <label><input type="checkbox" value="5000" onchange="updateAddersBattery()"> Span MPU - 5000</label>
         <label><input type="checkbox" value="750" onchange="updateAddersBattery()"> D-rate - 750</label>
-        <!-- Add all remaining SMP options as checkboxes here -->
+        <label><input type="checkbox" value="500" onchange="updateAddersBattery()"> Sub panel - basic - 500</label>
+        <label><input type="checkbox" value="1500" onchange="updateAddersBattery()"> Sub panel - complex - 1500</label>
+        <label><input type="checkbox" value="1500" onchange="updateAddersBattery()"> EV charger - 1500</label>
+        <label><input type="checkbox" value="500" onchange="updateAddersBattery()"> EV outlet - 500</label>
+        <label><input type="checkbox" value="1082.4" onchange="updateAddersBattery()"> IQ 8 upgrade - 1082.4</label>
+        <label><input type="checkbox" value="9300" onchange="updateAddersBattery()"> 10p - no back up - 9300</label>
+        <label><input type="checkbox" value="12450" onchange="updateAddersBattery()"> 15p - no back up - 12450</label>
+        <label><input type="checkbox" value="16600" onchange="updateAddersBattery()"> 20p - no back up - 16600</label>
+        <label><input type="checkbox" value="20750" onchange="updateAddersBattery()"> 25p - no back up - 20750</label>
+        <label><input type="checkbox" value="24900" onchange="updateAddersBattery()"> 30p - no back up - 24900</label>
+        <label><input type="checkbox" value="12800" onchange="updateAddersBattery()"> 10p - back up - 12800</label>
+        <label><input type="checkbox" value="16950" onchange="updateAddersBattery()"> 15p - back up - 16950</label>
+        <label><input type="checkbox" value="21100" onchange="updateAddersBattery()"> 20p - back up - 21100</label>
+        <label><input type="checkbox" value="25250" onchange="updateAddersBattery()"> 25p - back up - 25250</label>
+        <label><input type="checkbox" value="29400" onchange="updateAddersBattery()"> 30p - back up - 29400</label>
+        <label><input type="checkbox" value="11500" onchange="updateAddersBattery()"> 1 - Powerwall 3 - 11500</label>
+        <label><input type="checkbox" value="23000" onchange="updateAddersBattery()"> 2 - Powerwall 3 - 23000</label>
+        <label><input type="checkbox" value="34500" onchange="updateAddersBattery()"> 3 - Powerwall 3 - 34500</label>
+        <label><input type="checkbox" value="46000" onchange="updateAddersBattery()"> 4 - Powerwall 3 - 46000</label>
+        <label><input type="checkbox" value="500" onchange="updateAddersBattery()"> 5-year panel cleaning (PPA) - 500</label>
+        <label><input type="checkbox" value="4500" onchange="updateAddersBattery()"> Non-export add-on system - 4500</label>
+        <label><input type="checkbox" value="350" onchange="updateAddersBattery()"> Attic run - 350</label>
+        <label><input type="checkbox" value="375" onchange="updateAddersBattery()"> Engineering stamp - 375</label>
+        <label><input type="checkbox" value="800" onchange="updateAddersBattery()"> Approximate permit cost - 800</label>
+        <label><input type="checkbox" value="1230" onchange="updateAddersBattery()"> Inflation - 1230</label>
+        <label><input type="checkbox" value="13000" onchange="updateAddersBattery()"> Franklin 13.6kw - 13000</label>
+        <label><input type="checkbox" value="11500" onchange="updateAddersBattery()"> Additional Franklin - 11500</label>
+        <label><input type="checkbox" value="2500" onchange="updateAddersBattery()"> Franklin backup - 2500</label>
+        <label><input type="checkbox" value="3500" onchange="updateAddersBattery()"> Battery only - 3500</label>
+        <label><input type="checkbox" value="2706" onchange="updateAddersBattery()"> Q tron 425 panel - 2706</label>
+        <label><input type="checkbox" value="21648" onchange="updateAddersBattery()"> Ground mount < 4kw - 21648</label>
+        <label><input type="checkbox" value="17138" onchange="updateAddersBattery()"> Ground mount 4-6kw - 17138</label>
+        <label><input type="checkbox" value="13530" onchange="updateAddersBattery()"> Ground mount 6.1kw+ - 13530</label>
+        <label><input type="checkbox" value="27060" onchange="updateAddersBattery()"> Raised ground mount < 4kw - 27060</label>
+        <label><input type="checkbox" value="22550" onchange="updateAddersBattery()"> Raised ground mount 4-6kw - 22550</label>
+        <label><input type="checkbox" value="18942" onchange="updateAddersBattery()"> Raised ground mount 6.1kw+ - 18942</label>
+        <label><input type="checkbox" value="800" onchange="updateAddersBattery()"> Small system 3-3.99kw - 800</label>
+        <label><input type="checkbox" value="1200" onchange="updateAddersBattery()"> Small system < 3kw - 1200</label>
+        <label><input type="checkbox" value="750" onchange="updateAddersBattery()"> Travel adder over 75-125 mi. from base - 750</label>
+        <label><input type="checkbox" value="1200" onchange="updateAddersBattery()"> Travel adder over 75-125 mi. w/ hotel - 1200</label>
+        <label><input type="checkbox" value="2500" onchange="updateAddersBattery()"> Travel adder 125-200 mi. - 2500</label>
+        <label><input type="checkbox" value="3500" onchange="updateAddersBattery()"> Travel adder 125-200 mi. w/ ground mount - 3500</label>
+        <label><input type="checkbox" value="750" onchange="updateAddersBattery()"> San Diego travel adder 75-100 mi. - 750</label>
+        <label><input type="checkbox" value="1000" onchange="updateAddersBattery()"> Battery inside garage - 1000</label>
+        <label><input type="checkbox" value="1000" onchange="updateAddersBattery()"> Lifetime panel cleaning (ownership only) - 1000</label>
+        <label><input type="checkbox" onchange="updateAddersBattery()"> Roof quote (no price listed)</label>
     </div>
 
     <!-- EmPower Tab Checkbox Group -->
@@ -111,15 +156,26 @@
         <label><input type="checkbox" value="5000" onchange="updateAddersBattery()"> 5p - 5000</label>
         <label><input type="checkbox" value="9000" onchange="updateAddersBattery()"> 10p - 9000</label>
         <label><input type="checkbox" value="13000" onchange="updateAddersBattery()"> 15p - 13000</label>
-        <!-- Add all remaining EmPower options as checkboxes here -->
+        <label><input type="checkbox" value="17000" onchange="updateAddersBattery()"> 20p - 17000</label>
+        <label><input type="checkbox" value="21000" onchange="updateAddersBattery()"> 25p - 21000</label>
+        <label><input type="checkbox" value="3000" onchange="updateAddersBattery()"> MPU - 3000</label>
+        <label><input type="checkbox" value="750" onchange="updateAddersBattery()"> Sub-panel - 750</label>
+        <label><input type="checkbox" value="750" onchange="updateAddersBattery()"> Derate - 750</label>
+        <label><input type="checkbox" value="3000" onchange="updateAddersBattery()"> MPI/Hi-Tie - 3000</label>
+        <label><input type="checkbox" value="5000" onchange="updateAddersBattery()"> Back up - 5000</label>
+        <label><input type="checkbox" value="8000" onchange="updateAddersBattery()"> Ground mount - 8000</label>
+        <label><input type="checkbox" value="15500" onchange="updateAddersBattery()"> Generac 22kW - 15500</label>
+        <label><input type="checkbox" value="675" onchange="updateAddersBattery()"> Non-export add-on - 675</label>
     </div>
 
     <!-- Trust Tab Checkbox Group -->
     <div id="Trust" class="checkbox-group" style="display: none;">
         <label><input type="checkbox" value="9000" onchange="updateAddersBattery()"> Tesla Power Wall 3 - 9000</label>
         <label><input type="checkbox" value="8500" onchange="updateAddersBattery()"> Additional Power Wall 3 - 8500</label>
+        <label><input type="checkbox" value="4500" onchange="updateAddersBattery()"> Enphase 5P - 4500</label>
+        <label><input type="checkbox" value="9000" onchange="updateAddersBattery()"> EG4 - 9000</label>
         <label><input type="checkbox" value="2800" onchange="updateAddersBattery()"> MPU - 2800</label>
-        <!-- Add all remaining Trust options as checkboxes here -->
+        <label><input type="checkbox" value="2500" onchange="updateAddersBattery()"> EG4 BU - 2500</label>
     </div>
 
     <!-- Freedom Forever Tab Checkbox Group -->
@@ -127,7 +183,34 @@
         <label><input type="checkbox" value="5000" onchange="updateAddersBattery()"> 5P <= 4kw no backup - 5000</label>
         <label><input type="checkbox" value="9750" onchange="updateAddersBattery()"> 10P <= 4kw no backup - 9750</label>
         <label><input type="checkbox" value="9000" onchange="updateAddersBattery()"> 5P > 4kw no backup - 9000</label>
-        <!-- Add all remaining Freedom Forever options as checkboxes here -->
+        <label><input type="checkbox" value="13750" onchange="updateAddersBattery()"> 10P > 4kw no backup - 13750</label>
+        <label><input type="checkbox" value="18500" onchange="updateAddersBattery()"> 15P > 4kw no backup - 18500</label>
+        <label><input type="checkbox" value="23250" onchange="updateAddersBattery()"> 20P > 4kw no backup - 23250</label>
+        <label><input type="checkbox" value="28000" onchange="updateAddersBattery()"> 25P > 4kw no backup - 28000</label>
+        <label><input type="checkbox" value="32750" onchange="updateAddersBattery()"> 30P > 4kw no backup - 32750</label>
+        <label><input type="checkbox" value="37500" onchange="updateAddersBattery()"> 35P > 4kw no backup - 37500</label>
+        <label><input type="checkbox" value="42250" onchange="updateAddersBattery()"> 40P > 4kw no backup - 42250</label>
+        <label><input type="checkbox" value="10500" onchange="updateAddersBattery()"> 5p - back up - 10500</label>
+        <label><input type="checkbox" value="16250" onchange="updateAddersBattery()"> 10p - back up - 16250</label>
+        <label><input type="checkbox" value="22000" onchange="updateAddersBattery()"> 15p - back up - 22000</label>
+        <label><input type="checkbox" value="27750" onchange="updateAddersBattery()"> 20p - back up - 27750</label>
+        <label><input type="checkbox" value="33500" onchange="updateAddersBattery()"> 25p - back up - 33500</label>
+        <label><input type="checkbox" value="39250" onchange="updateAddersBattery()"> 30p - back up - 39250</label>
+        <label><input type="checkbox" value="45000" onchange="updateAddersBattery()"> 35p - back up - 45000</label>
+        <label><input type="checkbox" value="9000" onchange="updateAddersBattery()"> 1 - Powerwall 3 - 9000</label>
+        <label><input type="checkbox" value="17500" onchange="updateAddersBattery()"> 2 - Powerwall 3 - 17500</label>
+        <label><input type="checkbox" value="26000" onchange="updateAddersBattery()"> 3 - Powerwall 3 - 26000</label>
+        <label><input type="checkbox" value="34500" onchange="updateAddersBattery()"> 4 - Powerwall 3 - 34500</label>
+        <label><input type="checkbox" value="43000" onchange="updateAddersBattery()"> 5 - Powerwall 3 - 43000</label>
+        <label><input type="checkbox" value="800" onchange="updateAddersBattery()"> Enphase IQ8 upgrade - 800</label>
+        <label><input type="checkbox" value="1500" onchange="updateAddersBattery()"> Tesla wall charger - 1500</label>
+        <label><input type="checkbox" value="389.5" onchange="updateAddersBattery()"> Critter guard - 389.5</label>
+        <label><input type="checkbox" value="1000" onchange="updateAddersBattery()"> Distance adder tier 2 - 1000</label>
+        <label><input type="checkbox" value="3000" onchange="updateAddersBattery()"> Distance adder tier 3 - 3000</label>
+        <label><input type="checkbox" value="10282.8" onchange="updateAddersBattery()"> Ground mount < 6kw - 10282.8</label>
+        <label><input type="checkbox" value="6855.2" onchange="updateAddersBattery()"> Ground mount 6kw - 10kw - 6855.2</label>
+        <label><input type="checkbox" value="5998.3" onchange="updateAddersBattery()"> Ground mount > 10kw - 5998.3</label>
+        <label><input type="checkbox" value="1000" onchange="updateAddersBattery()"> Small system adder <= 4kw - 1000</label>
     </div>
 
     <button onclick="calculateCommission()">Calculate Commission</button>
@@ -136,16 +219,12 @@
 
     <script>
         function showTab(tabId) {
-            // Hide all checkbox groups
-            const allTabs = document.querySelectorAll('.checkbox-group');
-            allTabs.forEach(tab => tab.style.display = 'none');
-            
-            // Set all tabs as inactive
+            const tabs = document.querySelectorAll('.checkbox-group');
+            tabs.forEach(tab => tab.style.display = 'none');
+            document.getElementById(tabId).style.display = 'flex';
+
             const allTabButtons = document.querySelectorAll('.tab');
             allTabButtons.forEach(button => button.classList.remove('active'));
-
-            // Show the selected tab
-            document.getElementById(tabId).style.display = 'flex';
             document.querySelector(`.tab[onclick="showTab('${tabId}')"]`).classList.add('active');
         }
 
@@ -153,7 +232,9 @@
             let total = 0;
             const selectedOptions = document.querySelectorAll('.checkbox-group input[type="checkbox"]:checked');
             selectedOptions.forEach(option => {
-                total += parseFloat(option.value);
+                if (option.value) {
+                    total += parseFloat(option.value);
+                }
             });
             document.getElementById("addersBattery").value = total;
         }
